# imonomy_task

./: README.md  manage.py  pyproject.toml
imonomy_task/: asgi.py  settings.py  urls.py  wsgi.py
render/: models.py  service.py  views.py
render/migrations/: 0001_initial.py
render/templates/: index.html
