[tool.poetry]
name = "imonomy_task"
version = "0.1.0"
description = ""
authors = ["88Ocelot <stas.mitrofanov1337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
